--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.9.5",
+    "axios": "^0.19.2",
     "next": "^9.3.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
